<package>
    <name>accr_msgs</name>
    <version>0.0.1</version>
    <description>
        The ACCR msgs package provides all the messages for ACCR UTGV
    </description>
    <author>Yangmengfei XU</author>
    <maintainer email="moduleliu@gmail.com">Mingliang Liu</maintainer>
    <license> MIT </license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- <build_depend>actionlib</build_depend> -->
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <!-- <build_depend>nav_msgs</build_depend> -->
    <!-- <build_depend>sensor_msgs</build_depend> -->
    <build_depend>message_generation</build_depend>


    <!-- <run_depend>actionlib</run_depend> -->
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <!-- <run_depend>nav_msgs</run_depend> -->
    <!-- <run_depend>sensor_msgs</run_depend> -->
    <run_depend>message_runtime</run_depend>

    <export>
    </export>

</package>
