<?xml version="1.0"?>
<package>
  <name> accr_comm </name>
  <version>0.0.1</version>
  <description> The communication node for ACCR UTGV </description>

  <author email="yangmengfei.xu@gmail.com">Murphy</author>

  <maintainer email="Moduleliu@gmail.com">Mingliang</maintainer>

  <license> MIT </license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>accr_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>accr_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
